Add exclude_text argument
