# api-server/main.py
@@ -9,7 +9,7 @@ from fastapi import Query, FastAPI, HTTPException
 from starlette.responses import FileResponse
 
 from sqlalchemy import or_, select, create_engine
-from sqlalchemy.orm import sessionmaker, scoped_session, noload
+from sqlalchemy.orm import sessionmaker, scoped_session, noload, load_only
 from typing import List, Optional
 
 import utils
@@ -78,7 +78,7 @@ def get_item(id: int = Query(1), verbosity: Verbosity = Verbosity.full):
 @app.get("/items", response_model=List[ItemResponse],
          response_model_exclude_none=True, response_model_exclude={"kids"})
 def get_items(item_type: ItemType = ItemType.story, query: Optional[str] = Query(None),
-              include_summary: Optional[bool] = True, by: Optional[str] = Query(None),
+              exclude_text: Optional[bool] = False, by: Optional[str] = Query(None),
               before_time: Optional[str] = None, after_time: Optional[str] = None,
               min_score: Optional[int] = None, max_score: Optional[int] = None,
               min_comments: Optional[int] = None, max_comments: Optional[int] = None,
@@ -94,13 +94,18 @@ def get_items(item_type: ItemType = ItemType.story, query: Optional[str] = Query
 
     # If query is not empty and type is story or comments, go the semantic search route
     if query is not None and item_type in [ItemType.story, ItemType.comment]:
-        return utils.search(DATA_SERVER, session, query, by,
+        return utils.search(DATA_SERVER, session, query, exclude_text, by,
                             before_time, after_time, min_score, max_score,
                             min_comments, max_comments, sort_by, sort_order,
                             skip, limit)
 
     # Set type and don't load any children by default
     items_query = session.query(Item)
+
+    if exclude_text:
+        fields = [Item.id, Item.type, Item.by, Item.time, Item.url,
+                  Item.score, Item.title, Item.descendants]
+        items_query = items_query.options(load_only(*fields))
     if item_type is not None:
         items_query = items_query.filter(Item.type == item_type.value)
     items_query = items_query.options(noload(Item.kids))
@@ -145,6 +150,8 @@ def get_items(item_type: ItemType = ItemType.story, query: Optional[str] = Query
         results = utils.get_poll_responses(session, results)
 
     # Add summary for ChatGPT
+    if exclude_text:
+        return results
     return utils.with_summary(session, results)
 
 
